tests/negative/typecheck/unit.orng
// unit.orng:5:20: error: expected a value of type `Int`, got a value of type `Type`
// fn main() -> Int {()}
//                   ^
// 
fn main() -> Int {()}
fn lol() -> Int{()}